# KamaClaudePro

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.pytest-tmp/pytest-of-min/pytest-0/test_cancel_running_session0/sess-49d9777cda3e/: meta.json  thread.jsonl
.pytest-tmp/pytest-of-min/pytest-0/test_closed_chat_session_can_r0/sess-481ca2e4ea81/: meta.json  thread.jsonl
.pytest-tmp/pytest-of-min/pytest-0/test_closed_one_shot_session_r0/sess-c6af3402fd85/: meta.json
.pytest-tmp/pytest-of-min/pytest-0/test_create_session_writes_met0/sess-eef9fd4267af/: meta.json
.pytest-tmp/pytest-of-min/pytest-0/test_list_sessions_sorted_by_u0/sess-new/: meta.json
docs/: core-code-map.md  project-guide.md  quick-guide.md  skillopt-analysis.md  termux.md  usage-manual.md  windows-openai.md
examples/mcp_minimal/: README.md  server.py
scripts/: setup_termux.sh  uv_sync.py  uv_sync.sh
src/kama_claude/cli/: main.py
src/kama_claude/cli/commands/: chat.py  session.py
src/kama_claude/core/: app.py  config.py  runner.py
src/kama_claude/core/bus/: commands.py
src/kama_claude/core/events/: bus.py
src/kama_claude/core/llm/: __init__.py  provider.py
src/kama_claude/core/session/: manager.py  model.py  store.py
src/kama_claude/core/transport/: socket_client.py  socket_server.py
src/kama_claude/tui/: __main__.py  app.py
src/kama_claude/web/: __main__.py
src/kama_claude/web/static/: app.css  app.js  index.html
tests/unit/: test_builtin_tools.py  test_config_env.py  test_llm_provider.py  test_session_manager.py  test_session_store.py  test_tui_app.py
(+12 files in other folders)
