[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KamaClaude"
version = "0.0.2"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.25",
    "openai>=1.0",
    "textual>=0.75",
    "httpx[socks]>=0.28.1",
]

[project.scripts]
kama = "kama_claude.cli.main:main"
kama-core = "kama_claude.core.app:run"
kama-tui = "kama_claude.tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kama_claude"]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]
"scripts/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that call the real Anthropic or OpenAI API",
]
